<resources>
    <string name="app_name">הסורקים</string>
    <string name="button_report_event_new_report">דווח</string>
    <string name="title_activity_maps">הסורקים</string>
    <string name="title_activity_report_event">דווח על אירוע</string>
    <string name="title_activity_new_report">New Event</string>
    <string name="text_new_event_vet_found">יש מרפאות ווטרינריות פתוחות באזור!</string>
    <string name="text_new_event_vet_question">האם אתם יכולים לקחת את הכלב לשם?</string>
    <string name="button_new_event_see_vet_list">פרטים</string>
    <string name="button_new_event_i_can_t">לא יכולים</string>
    <string name="title_activity_vet_list">מרפאות ווטרינריות</string>
    <string name="logo_content_description">Logo</string>
    <string name="title_activity_have_dog_msg">Is the dog with you?</string>
    <string name="button_new_event_have_dog_continue">Continue</string>
    <string name="text_new_event_have_dog_msg_please">הכלב נמצא איתי ואינו יכול לברוח</string>
    <string name="text_new_event_have_dog_msg_if">If the dog is not with you, we will not be able to send anyone to help</string>
    <string name="title_more_details_request">פרטי דיווח</string>
    <string name="text_new_event_we_will_check_report">פרטי הדיווח</string>
    <string name="button_new_event_more_details_submit">שלח דיווח</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vet_clinic_name">שם:</string>
    <string name="vet_clinic_address">כתובת:</string>
    <string name="vet_clinic_walking_distance">מרחק:</string>
    <string name="vet_clinic_search">veterinary_care</string>
    <string name="for_more_details"><u>לפרטים נוספים</u></string>
    <string name="vet_clinic_phone_number">טלפון:</string>
    <string name="vet_clinic_opening_hours"><u>שעות פתיחה:</u></string>
    <string name="vet_clinic_website">אתר</string>
    <string name="vet_list_back_to_report">המשך בכל זאת לדיווח</string>
    <string name="phone_call">חייג</string>
    <string name="get_route">מסלול</string>
    <string name="title_activity_veterinay_clinic_more_details">פרטי המרפאה</string>
    <string name="action_settings">Settings</string>
    <string name="addReportPhone">טלפון *</string>
    <string name="newReportAddInformation">מידע נוסף</string>
    <string name="NewReportReporterName">שם המדווח/ת *</string>
    <string name="newReportMyLocation">המיקום שלי</string>
    <string name="closed_report_details_headline"><u>פרטי הדיווח</u></string>
    <string name="new_report">דיווח חדש</string>
    <string name="address_not_found">Address not found</string>
    <string name="icon_of_a_dog">Icon of a dog</string>
    <string name="no_network_error">Error while trying to get address - Service not available</string>
    <string name="invalid_lat_long">Invalid lat long arguments</string>
    <string name="address_not_found_to_user">כתובת לא נמצאה</string>
    <string name="unknown_address">כתובת לא ידועה</string>
    <string name="ok">לרשימת וטרינרים קרובים</string>
    <string name="cancel">המשך לדיווח</string>
    <string name="vet_dialog_title"><b>קצרו את התהליך!</b></string>
    <string name="vet_dialog_message"><b>ללא כל עלות</b> ובמקום להמתין לסורק: גשו לוטרינר קרוב, אשר יבצע בעצמו את הסריקה</string>
    <string name="title_activity_settings">Settings</string>
    <string name="not_checked_dialog_title">שים לב!</string>
    <string name="not_checked_dialog_message">נוכל לשלוח סורק רק במידה והכלב נמצא איתך ואינו יכול לברוח</string>
    <string name="ok_not_checked">המשך בכל מקרה</string>
    <string name="cancel_not_checked">ביטול</string>
    <string name="similar_report_dialog_title">שים לב!</string>
    <string name="similar_report_dialog_message">קיימת בקשה פתוחה על שימך כבר במערכת, ואת/ה הולכ/ת לפתוח בקשה נוספת</string>
    <string name="ok_similar_report">המשך בכל מקרה</string>
    <string name="cancel_similar_report">ביטול</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">כללי</string>
    <string name="pref_title_display_name">שם המדווח</string>
    <string name="pref_default_display_name">""</string>
    <string name="pref_title_phone_number">מספר טלפון</string>
    <string name="pref_default_phone_number">""</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">התראות</string>
    <string name="pref_title_new_message_notifications">התראות על שינוי סטטוס דיווח</string>
    <string name="pref_title_ringtone">צליל</string>
    <string name="pref_ringtone_silent">שקט</string>
    <string name="pref_title_vibrate">רטט</string>

    <string name="my_reports">הדיווחים שלי</string>
    <string name="nearby_vet">וטרינרים בסביבה</string>
    <string name="Community">קהילה</string>
    <string name="Share">שתף</string>
    <string name="Who_are_we">מי אנחנו</string>
    <string name="open_vets">מרפאות פתוחות</string>
    <string name="all_vets">כל המרפאות</string>
    <string name="to_organization_website">לאתר העמותה לחצו <a href="http://www.hasorkim.co.il"><b>כאן</b></a></string>
    <string name="organization_description">הסבר על העמותה</string>
    <string name="text_new_event_have_dog_msg_please_make_sure">שימ/י לב, לא נוכל לשלוח סורק במידה ולא</string>
    <string name="ImageString">תמונה</string>
    <string name="add_photo">add photo</string>
    <string name="searching_chips_website">http://www.moag.gov.il/Pages/DogSearch.aspx</string>
    <string name="route_unavailable">זמנית לא ניתן לספק מסלול</string>
    <string name="report_address">כתובת:</string>
    <string name="time_of_report">זמן הדיווח:</string>
    <string name="report_details_status">סטטוס:</string>
    <string name="report_status"><u>סטטוס</u></string>
    <string name="active_report_address">כתובת:</string>
    <string name="active_report_phone">טלפון:</string>
    <string name="active_report_extra_phone">טלפון נוסף:</string>
    <string name="delete_report">ביטול דיווח</string>
    <string name="so_what_now">מה קורה עכשיו?</string>
    <string name="closed_report_photo_description">The dog\'s photo</string>
    <string name="closed_report_photo">תמונה</string>
    <string name="closed_report_date">תאריך:</string>
    <string name="closed_report_address">כתובת:</string>
    <string name="closed_reports_more_info">הערות:</string>
    <string name="report_photo_recommended">(מומלץ)</string>
    <string name="reporter_name_hint">יש להכניס שם</string>
    <string name="reporter_phone_number_hint">יש להכניס מספר טלפון</string>
    <string name="reporter_extra_info_hint">ניתן להכניס מידע נוסף</string>
    <string name="my_last_open_report">חזור לבקשה</string>
    <string name="cancel_dialog_title"><b>ביטול הדיווח</b></string>
    <string name="cancel_report"><b>בטל דיווח</b></string>
    <string name="back_report"><b>חזור</b></string>
    <string name="cancel_dialog_message"><b>אנא הכנס/י את סיבת הביטול</b></string>
    <string name="what_now"><b>מה עכשיו?</b></string>
    <string name="no_reports_exists">לא קיימים דיווחים</string>
    <string name="who_we_are_headline">מי אנחנו</string>
    <string name="setting">הגדרות</string>
    <string name="need_permission">אין אפשרות לצלם תמונה מבלי הרשאה זו</string>
    <string name="for_more_details_press">לפרטים נוספים לחץ/י על המרפאה</string>
    <string name="location_error">קרתה תקלה שקשורה למיקום</string>
    <string name="what_now_string1">שלחתם לנו דיווח? מעולה!</string>
    <string name="what_now_string2">אנחנו מטפלים מיידית כמעט בכל דיווח שעולה, גם אם עוד לא יצרנו קשר.</string>
    <string name="what_now_string3">אנא, התאזרו בסבלנות עד שנמצא סורק באיזורכם - והכי חשוב: שמרו על הכלב שמצאתם, קישרו אותו ברצועה או סיגרו אותו במקום בטוח והישארו איתו.</string>
    <string name="what_now_string4">אנחנו יודעים שיש לכם תוכניות, ולא בניתם להיתקע עכשיו עם כלב, אבל אם זה היה הכלב שלכם שאבד?</string>
    <string name="what_now_string5">החיים שלהם - בידיים שלכם!</string>
    <string name="who_we_are_string1">אנחנו הסורקים!</string>
    <string name="who_we_are_string2"><u>המטרה העיקרית שלנו:</u></string>
    <string name="who_we_are_string3">החזרת כלבים אבודים הביתה!</string>
    <string name="who_we_are_string4"><u>השאיפה שלנו:</u></string>
    <string name="who_we_are_string5">בכל נקודה בארץ בה תמצאו כלב, יהיה סורק בקרבתו ונוכל להחזיר אותו לבעלים.</string>
    <string name="who_we_are_string6">בנוסף,</string>
    <string name="who_we_are_string7">אנו פועלים להעלאת המודעות לחשיבות השבב, הקמת מערך אומנה וקליטת כלבים ללא בעלים.</string>
    <string name="who_we_are_string8"><u>בשביל זה אנחנו צריכים אתכם!</u></string>
    <string name="who_we_are_string9">רכשו סורק, או פנו אלינו לשמש כאומנה והצטרפו אלינו!</string>
    <string name="share">שתף</string>
    <string name="active_report">דיווח פעיל</string>
    <string name="closed_report">דיווח לא פעיל</string>
    <string name="deleted_by">בוטל ע\"י:</string>
    <string name="report_delete_reason">סיבת ביטול:</string>
    <string name="report_close_reason">סיבת סגירה:</string>
    <string name="the_report_string">הדיווח</string>
    <string name="extra_phone_number_hint">ניתן להכניס מס\' נוסף</string>
    <string name="general_key">AIzaSyDVTZm5FPoWIsqLkYH_EW7AZDEe5Q3uZ50</string>
    <string name="channel_name">hasorkim</string>
    <string name="channel_description">hasorkim</string>
    <string name="userId">userId</string>

</resources>
