<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_reports"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/my_reports" />
        <item
            android:id="@+id/nav_nearby_vet"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/nearby_vet" />
    </group>

    <item android:title="@string/Community">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/Who_are_we" />
        </menu>
    </item>

</menu>
