<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/place_details_list_layout_padding"
    tools:context="il.ac.tau.cloudweb17a.hasorkim.WhoWeAreActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/title_padding"
        android:text="@string/who_we_are_string1"
        android:textSize="@dimen/new_report_size"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_we_are_string2"
        android:textSize="@dimen/report_padding"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/place_details_list_layout_padding"
        android:text="@string/who_we_are_string3"
        android:textSize="@dimen/report_text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_we_are_string4"
        android:textSize="@dimen/report_padding"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/place_details_list_layout_padding"
        android:text="@string/who_we_are_string5"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/place_details_list_layout_padding"
        android:text="@string/who_we_are_string6"
        android:textSize="@dimen/who_we_are_in_addition_size"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_we_are_string7"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_we_are_string8"
        android:textSize="@dimen/standard_text_size"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_we_are_string9"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/go_to_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/image_report_padding"
        android:text="@string/to_organization_website"
        android:textStyle="bold"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>