<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportDetailsBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/nav_header_vertical_spacing"
    tools:context="il.ac.tau.cloudweb17a.hasorkim.NewEventMoreDetailsRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.5"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/alert_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/report_padding"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/reportCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="top|center_horizontal"
                    android:textSize="@dimen/standard_text_size"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dog_is_with_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_new_event_have_dog_msg_please"
                        android:textColor="@android:color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dog_is_with_me"
                        android:text="@string/text_new_event_have_dog_msg_please_make_sure"
                        android:textColor="@color/attentionColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alert_message"
                android:paddingBottom="@dimen/report_padding"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="@dimen/image_report_padding">

                    <TextView
                        android:id="@+id/report_details_photo_headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ImageString"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/report_details_photo_headline"
                        android:text="@string/report_photo_recommended"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <ImageButton
                    android:id="@+id/imageButtonReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/image_report_padding"
                    android:contentDescription="@string/add_photo"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                    style="@style/Widget.AppCompat.Button.Colored"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reporter_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_layout"
                android:paddingBottom="@dimen/report_padding"
                android:orientation="horizontal"
                android:textStyle="bold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/NewReportReporterName"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/active_report_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reporterName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:hint="@string/reporter_name_hint"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reporter_name_layout"
                android:paddingBottom="@dimen/report_padding"
                android:orientation="horizontal"
                android:textStyle="bold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addReportPhone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/active_report_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reporterPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:hint="@string/reporter_phone_number_hint"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number_layout"
                android:paddingBottom="@dimen/report_padding"
                android:orientation="horizontal"
                android:textStyle="bold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newReportMyLocation"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/active_report_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reportLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:textSize="@dimen/standard_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_location_layout"
                android:paddingBottom="@dimen/report_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newReportAddInformation"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/active_report_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/moreInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="false"
                    android:hint="@string/reporter_extra_info_hint"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/submitReport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/button_new_event_more_details_submit"
        android:textColor="@color/backgroundColor"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>