<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportDetailsBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/nav_header_vertical_spacing"
    tools:context="il.ac.tau.cloudweb17a.hasorkim.NewReportActivity">

    <ScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitReport"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/alert_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/report_image_padding">

                <CheckBox
                    android:id="@+id/reportCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="top|center_horizontal"
                    android:textSize="@dimen/standard_text_size"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dog_is_with_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_new_event_have_dog_msg_please"
                        android:textColor="@android:color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dog_is_with_me"
                        android:text="@string/text_new_event_have_dog_msg_please_make_sure"
                        android:textColor="@color/attentionColor"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ReportImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alert_message"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/report_padding"
                android:contentDescription="@string/closed_report_photo_description"
                android:maxHeight="275dp"
                android:maxWidth="275dp"
                android:adjustViewBounds="true"
                android:src="@drawable/add_dog"
                android:background="@null" />

            <LinearLayout
                android:id="@+id/reporter_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ReportImageView"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/vet_list_padding"
                android:textStyle="bold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/NewReportReporterName"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/report_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reporterName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:hint="@string/reporter_name_hint"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reporter_name_layout"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/report_padding"
                android:textStyle="bold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addReportPhone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/report_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reporterPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:hint="@string/reporter_phone_number_hint"
                    android:inputType="phone"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number_layout"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/report_padding"
                android:textStyle="bold">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newReportMyLocation"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/report_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reportLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:textSize="@dimen/standard_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/more_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_location_layout"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/report_padding">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newReportAddInformation"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/report_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/moreInformation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:hint="@string/reporter_extra_info_hint"
                    android:inputType="textImeMultiLine" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/submitReport"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_new_event_more_details_submit"
        android:textColor="@color/backgroundColor"
        android:textSize="@dimen/submit_report_text_size"
        android:textStyle="bold" />

</RelativeLayout>